# qa-chat-tester

./: .gitignore  Dockerfile.api  Dockerfile.cli  Dockerfile.dashboard  Dockerfile.worker  README.md  batch_runner.py  docker-compose.yml  main.py  pyproject.toml
agents/: agent_base.py  analysis.py  user.py
celery_queue/: config.py  worker.py
celery_queue/jobs/: tasks.py
cli/: admin.py
dashboard/: index.html  server.py
db/: log.py  sql.py
db/migrations/: 001_initial.sql  002_users_update.sql
db/models/: user.py
db/repositories/: __init__.py  account_repository.py  base.py  case_repository.py  conversation_repository.py  insight_repository.py  log_repository.py  run_repository.py  test_case_repository.py  test_suite_repository.py  user_repository.py
docs/: openapi.json  openapi.yaml
lib/: agent_loop.py  auth.py  mongo.py  mysql.py  sql_db.py
queue/: config.py
queue/jobs/: tasks.py
scripts/: export_openapi.py
server/: main.py
server/api/: __init__.py
server/api/v1/: __init__.py  accounts.py  analyses.py  auth.py  cases.py  conversations.py  deps.py  export.py  pagination.py  runs.py  stats.py  suites.py  xlsx.py
tools/: common.py  messages.py
utils/: agent_runner.py  built_in_func.py  prompt_utils.py  tool_utils.py
