[project]
name = "qachattester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "certifi>=2024.0.0",
    "fastapi>=0.135.3",
    "fastapi-limiter>=0.2.0",
    "google-adk>=1.28.1",
    "loguru>=0.7.3",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "pymysql>=1.1.0",
    "pyrefly>=0.60.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.49",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
